# real-time-transcriber

./: .gitignore  README.md  pyproject.toml  reset-win.bat  run.py  uninstall-mac.command  uninstall-win.bat
app/: config.py  events.py  menubar.py  recorder.py  server.py  settings.py  storage.py  summarize.py  transcribe.py  updater.py
app/prompts/: brainstorm_ru.txt  meeting_ru.txt  planning_ru.txt  presentation_ru.txt
models/: README.md
scripts/: install-mac.sh  install.bat  launch-mac.sh  launch.bat  run-mac.sh
web/: app.js  index.html  styles.css
